--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		</head>
 		
 		<body id="page-top">
-			<div id="app">Hello</div>
+			<h2>Hello again!</h2>
+<p>I'm a new paragraph</p>
 		</body>
 </html>
