--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		</head>
 		
 		<body id="page-top">
-			<h2>Hello again!</h2>
-<p>I'm a new paragraph</p>
+			<div id="app"></div>
+			<script src="scripts.min.js"></script>
+			<div class="malarkey"></div>
+  			<script src="js/Type.js"></script> 
 		</body>
 </html>
